Some code cleanup and basic code completion.